--- a/admin-application/src/main/resources/templates/reports/inventoryReport.html
+++ b/admin-application/src/main/resources/templates/reports/inventoryReport.html
@@ -13,12 +13,19 @@
 
 		<!-- body -->
 	 	<div class="container row"> 
-		<div class="col-lg-2">
+		<div class="col-lg-3">
 			<div th:replace="common/reports-common :: reportMenuFragment"></div>
 		</div>
 		
-		<div class="col-lg-10 card" id="reportDetail">
-				<table></table>
+		<div class="col-lg-9 card" id="reportDetail">
+				<table>
+				<tr><td>
+				<img th:src="@{'data:image/png;base64,'+${chart}}" />
+				</td></tr>
+				<tr><td><br>
+				<a th:href="@{|/download?exportType=inventoryExport|}">Download inventory data</a>
+				</td></tr>
+				</table>
 			</div>
 		</div>
 		</div>
