admin-application changes

--- a/admin-application/src/main/resources/templates/home.html
+++ b/admin-application/src/main/resources/templates/home.html
@@ -13,7 +13,62 @@
 
 		<!-- body -->
 		<div class="container row">
-		home page works !
+			<table>
+				<tr>
+					<td><h4>Admin portal capabilities !</h4></td>
+				</tr>
+				<tr>
+					<td>
+						<div class="card">
+							<img class="card-img-top" src="/api/image?name=jsa_about"
+								alt="JSA Card image" />
+							<div class="card-body">
+								<h4 class="card-title">Add Books</h4>
+								<p class="card-text">We are passionate engineers in software
+									development by Java Technology and Spring Framework. We believe
+									that creating little good thing with specific orientation
+									everyday can make great influence on the world someday.</p>
+								<a href="#" target="_blank" class="btn btn-primary">Detail</a> <a
+									href="#" target="_blank" class="btn btn-primary">Contact</a>
+							</div>
+						</div>
+					</td>
+					<td>
+					
+					<div class="card">
+							<img class="card-img-top" src="/api/image?name=jsa_about"
+								alt="JSA Card image" />
+							<div class="card-body">
+								<h4 class="card-title">View Edit books</h4>
+								<p class="card-text">We are passionate engineers in software
+									development by Java Technology and Spring Framework. We believe
+									that creating little good thing with specific orientation
+									everyday can make great influence on the world someday.</p>
+								<a href="#" target="_blank" class="btn btn-primary">Detail</a> <a
+									href="#" target="_blank" class="btn btn-primary">Contact</a>
+							</div>
+						</div>
+					
+					</td>
+					<td>
+					
+					<div class="card">
+							<img class="card-img-top" src="/api/image?name=jsa_about"
+								alt="JSA Card image" />
+							<div class="card-body">
+								<h4 class="card-title">Reports/Analytics</h4>
+								<p class="card-text">We are passionate engineers in software
+									development by Java Technology and Spring Framework. We believe
+									that creating little good thing with specific orientation
+									everyday can make great influence on the world someday.</p>
+								<a href="#" target="_blank" class="btn btn-primary">Detail</a> <a
+									href="#" target="_blank" class="btn btn-primary">Contact</a>
+							</div>
+						</div>
+					</td>
+				</tr>
+			</table>
+			<br>
 		</div>
 
 
